hra/patternlab/site/sass/molecules/_faqs.scss
/*------------------------------------*\
    $FAQS
\*------------------------------------*/

.faq-page {
    position: relative;
    height: calc(100vh - 103px);
    background-color: #e8eaed;

    &::after {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: #eee;
        content: '';
    }
}

.faq-panel {
    display: inline-block;
    overflow: scroll;
    vertical-align: top;
    // sass-lint:disable no-misspelled-properties, no-vendor-prefixes
    -webkit-overflow-scrolling: touch;
    // sass-lint:enddisable

    @include media-query(tablet) {
        height: auto;
    }

    &--questions {
        position: relative;
        z-index: $z-zeta;
        width: 35%;
        height: 100%;
        padding: 50px 0;
        background-image: linear-gradient(to bottom, #8f4085, #a62f79);
        transition: transform 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);

        @include media-query(laptop) {
            margin-top: 20px;
        }

        @include media-query(tablet) {
            width: 100%;
            padding: 20px 0;
        }
    }

    &--answers {
        position: relative;
        left: auto;
        z-index: $z-milli;
        width: 65%;
        padding: 10px 70px;
        overflow: hidden;
        transition: opacity $default-transition-speed cubic-bezier(0.445, 0.05, 0.55, 0.95), transform $default-transition-speed cubic-bezier(0.445, 0.05, 0.55, 0.95);

        @include media-query(tablet) {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            padding: 20px;
            opacity: 0;
        }
    }

    &--questions-hide {
        @include media-query(tablet) {
            transform: translate3d(-100%, 0, 0);
        }
    }

    &--answers-display {
        opacity: 1;
    }

    &--fixed {
        position: fixed;
        top: 150px;
        transform: translate3d(0, 0, 0);
    }

    &__heading {
        @include rem-font-size(40px);
        padding: 0 70px;
        margin-bottom: 20px;
        color: #fff;

        @include media-query(tablet) {
            padding: 0 20px;
        }
    }
}

.faq-questions {
    margin-top: 0;

    &__item {
        position: relative;
        transition: background-color $default-transition-speed ease;

        > a {
            @include rem-font-size(18px);
            display: block;
            padding: 20px 70px;
            font-family: $font--secondary;
            font-weight: bold;
            line-height: 1.4;
            color: #fff;

            @include media-query(tablet) {
                padding: 20px;
            }

            &:focus {
                outline: 0;
            }
        }
    }

    &__item:hover,
    &__item--selected {
        background-color: rgba(0, 0, 0, 0.3);

        @include media-query(tablet) {
            background-color: transparent;
        }
    }
}

.faq-answers {
    margin-top: 0;

    &__item {
        display: none;
        opacity: 0;
        transform: translate3d(0, 5px, 0);
        transition: transform 800ms ease, opacity 800ms ease;

        > h3 {
            @include rem-font-size(25px);
            margin-top: 10px;
            font-family: $font--secondary;
        }

        > p {
            @include rem-font-size(18px);
            margin-bottom: 30px;
            font-weight: 100;
            line-height: 1.6;
        }

        .rich-text {
            p {
                @include rem-font-size(18px);
                line-height: 24px;
            }
        }
    }

    &__item--selected {
        display: block;
    }

    &__item--display {
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }

    // Cross icon
    &__close-answer {
        display: none;

        @include media-query(tablet) {
            position: relative;
            display: block;
            width: 20px;
            height: 20px;
            padding: 0;
            margin: auto 0;
            cursor: pointer;
            background-color: transparent;
            border: 0;

            &::before,
            &::after {
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                width: 100%;
                height: 2px;
                margin: auto;
                background-color: #000;
                content: '';
                transition: transform $default-transition-speed ease, opacity $default-transition-speed ease;
            }

            &::before {
                transform: rotate(-45deg);
            }

            &::after {
                transform: rotate(45deg);
            }

            // Animate icon on hover
            &:hover {
                &::before {
                    transform: rotate(0deg);
                }

                &::after {
                    opacity: 0;
                }
            }

            // Focus state
            &:focus {
                outline: 0;
            }
        }
    }
}

